fix: stacking meetup tiles on mobile

--- a/src/pages/meetups/Meetups.scss
+++ b/src/pages/meetups/Meetups.scss
@@ -62,7 +62,7 @@
   }
 
   &-tile {
-    height: 120%;
+    height: 110%;
     justify-content: space-between;
 
     &-image {
